@@ -113,49 +113,6 @@ bse_type_register_dynamic (GType        parent_type,
 /* --- SFIDL includes --- */
 /* provide common constants */
 #include "bseglobals.h"
-/* provide IDL type initializers */
-#define	sfidl_pspec_Int(group, name, nick, blurb, dflt, min, max, step, hints)	\
-  sfi_pspec_set_group (sfi_pspec_int (name, nick, blurb, dflt, min, max, step, hints), group)
-#define	sfidl_pspec_Int_default(group, name)	\
-  sfi_pspec_set_group (sfi_pspec_int (name, NULL, NULL, 0, G_MININT, G_MAXINT, 256, SFI_PARAM_DEFAULT), group)
-#define	sfidl_pspec_Num(group, name, nick, blurb, dflt, min, max, step, hints)	\
-  sfi_pspec_set_group (sfi_pspec_num (name, nick, blurb, dflt, min, max, step, hints), group)
-#define	sfidl_pspec_Num_default(group, name)	\
-  sfi_pspec_set_group (sfi_pspec_num (name, NULL, NULL, 0, SFI_MINNUM, SFI_MAXNUM, 1000, SFI_PARAM_DEFAULT), group)
-#define	sfidl_pspec_UInt(group, name, nick, blurb, dflt, hints)	\
-  sfi_pspec_set_group (sfi_pspec_int (name, nick, blurb, dflt, 0, G_MAXINT, 1, hints), group)
-#define	sfidl_pspec_Real(group, name, nick, blurb, dflt, min, max, step, hints)	\
-  sfi_pspec_set_group (sfi_pspec_real (name, nick, blurb, dflt, min, max, step, hints), group)
-#define	sfidl_pspec_Real_default(group, name)	\
-  sfi_pspec_set_group (sfi_pspec_real (name, NULL, NULL, 0, -SFI_MAXREAL, SFI_MAXREAL, 10, SFI_PARAM_DEFAULT), group)
-#define	sfidl_pspec_Bool(group, name, nick, blurb, dflt, hints)			\
-  sfi_pspec_set_group (sfi_pspec_bool (name, nick, blurb, dflt, hints), group)
-#define	sfidl_pspec_Bool_default(group, name)	\
-  sfi_pspec_set_group (sfi_pspec_bool (name, NULL, NULL, FALSE, SFI_PARAM_DEFAULT), group)
-#define	sfidl_pspec_Choice_default(group, name, cvalues)	\
-  sfi_pspec_set_group (sfi_pspec_choice (name, NULL, NULL, NULL, cvalues, SFI_PARAM_DEFAULT), group)
-#define	sfidl_pspec_Note(group, name, nick, blurb, dflt, hints)			\
-  sfi_pspec_set_group (sfi_pspec_note (name, nick, blurb, dflt, SFI_MIN_NOTE, SFI_MAX_NOTE, FALSE, hints), group)
-#define	sfidl_pspec_Octave(group, name, nick, blurb, dflt, hints)			\
-  sfi_pspec_set_group (sfi_pspec_int (name, nick, blurb, dflt, BSE_MIN_OCTAVE, BSE_MAX_OCTAVE, 4, hints), group)
-#define	sfidl_pspec_Freq(group, name, nick, blurb, dflt, hints)			\
-  sfi_pspec_set_group (sfi_pspec_real (name, nick, blurb, dflt, BSE_MIN_OSC_FREQUENCY_f, BSE_MAX_OSC_FREQUENCY_f, 10.0, hints), group)
-#define	sfidl_pspec_FineTune(group, name, nick, blurb, hints)			\
-  sfi_pspec_set_group (sfi_pspec_int (name, nick, blurb, 0, BSE_MIN_FINE_TUNE, BSE_MAX_FINE_TUNE, 10, hints), group)
-#define	sfidl_pspec_String(group, name, nick, blurb, dflt, hints)			\
-  sfi_pspec_set_group (sfi_pspec_string (name, nick, blurb, dflt, hints), group)
-#define	sfidl_pspec_String_default(group, name)  \
-  sfi_pspec_set_group (sfi_pspec_string (name, NULL, NULL, NULL, SFI_PARAM_DEFAULT), group)
-#define	sfidl_pspec_Proxy_default(group, name)  \
-  sfi_pspec_set_group (sfi_pspec_proxy (name, NULL, NULL, SFI_PARAM_DEFAULT), group)
-#define	sfidl_pspec_BoxedSeq(group, name, nick, blurb, hints, element_pspec)		\
-  sfi_pspec_set_group (sfi_pspec_seq (name, nick, blurb, element_pspec, hints), group)
-#define	sfidl_pspec_BoxedRec(group, name, nick, blurb, hints, fields)			\
-  sfi_pspec_set_group (sfi_pspec_rec (name, nick, blurb, fields, hints), group)
-#define	sfidl_pspec_BoxedRec_default(group, name, fields)	\
-  sfi_pspec_set_group (sfi_pspec_rec (name, NULL, NULL, fields, SFI_PARAM_DEFAULT), group)
-#define	sfidl_pspec_BBlock(group, name, nick, blurb, hints)				\
-  sfi_pspec_set_group (sfi_pspec_bblock (name, nick, blurb, hints), group)
 /* provide IDL constants */
 #define	KAMMER_FREQ	BSE_KAMMER_FREQUENCY_f
 #define	KAMMER_NOTE	BSE_KAMMER_NOTE
